# simple-activitypub

./: Cargo.toml  Dockerfile  README.md  compose.yaml
.devcontainer/: compose.extend.yaml  devcontainer.json
src/: main.rs
src/actorKey/: private.pem  public.pem
