[package]
name = "simple-activitypub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
axum-macros = { version = "0.4.2" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.1", features = [
    "trace",
    "timeout",
    "normalize-path",
] }

httpdate = { version = "1.0.3" }
openssl = { version = "0.10" }
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
